--- a/src/shared/themes/editor/menu/dark.css
+++ b/src/shared/themes/editor/menu/dark.css
@@ -1,6 +1,6 @@
 /**
  * Editor Theme - Menu Component - Dark Mode
- * VvvebJS-inspired dark panel menu styling
+ * -inspired dark panel menu styling
  */
 
 [data-theme="editor-dark"] {
