--- a/src/shared/themes/editor/menu/index.css
+++ b/src/shared/themes/editor/menu/index.css
@@ -1,6 +1,6 @@
 /**
  * Editor Theme - Menu Component
- * VvvebJS-inspired minimal menu styling
+ * -inspired minimal menu styling
  */
 
 @import './common.css';
